# yt-music-py

./: .gitignore  AGENTS.md  Makefile  README.md  config.toml  config.toml.example  links.txt  pyproject.toml  yt-music
yt_music/: __main__.py  cli.py  downloader.py  fixer.py  imaging.py  postprocessors.py  ui.py
yt_music/coverart/: __init__.py  deezer.py  discogs.py  musicbrainz.py  scoring.py
yt_music/lyrics/: __init__.py  lrclib.py
yt_music/postprocessors/: __init__.py  checkers.py  embedders.py  processors.py
