[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-music"
version = "0.1.0"
description = "YouTube Music downloader with lyrics & cover art"
requires-python = ">=3.11"
dependencies = ["yt-dlp", "mutagen"]

[project.scripts]
yt-music = "yt_music.cli:main"

[tool.setuptools.packages.find]
include = ["yt_music*"]
