[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-music"
version = "0.0.4"
description = "YouTube Music downloader with lyrics & cover art"
requires-python = ">=3.11"
dependencies = ["yt-dlp", "mutagen"]

[project.scripts]
yt-music = "yt_music.cli:main"

[tool.setuptools.packages.find]
include = ["yt_music*"]

[dependency-groups]
dev = ["ruff>=0.15.20", "mypy>=1.15.0"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["yt_dlp.*", "mutagen.*"]
ignore_missing_imports = true
